[package]
name = "nats-connect"
version = "0.1.0"
edition = "2021"
description = "Bidirectional async streams over NATS.io"
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rvolosatovs/nats-connect"

[features]
bin = ["clap", "tokio/io-std", "tokio/macros", "tokio/rt-multi-thread", "tracing", "tracing-subscriber"]
default = ["bin"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-nats = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"], optional = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt"], optional = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-nats = { version = "0.33", default-features = false }
bytes = { version = "1", default-features = false }
clap = { version = "4", default-features = false }
futures = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
